# godot_cpp_cmake_template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  init  init.ps1
.github/workflows/: build.yml
game/: project.godot
src/: gdexample.cpp  register_types.cpp  register_types.hpp
